# qgis-workflow-documentation

./: .gitignore  README.md  pyproject.toml  ruff-errors.txt
.github/workflows/: release.yml
plugin/: __init__.py  automated_workflow_documentation.py  metadata.txt  resources.py  resources.qrc
plugin/Plugin/: main_dialog.py  mimetypes.json  utility.py
plugin/Plugin/Export/: export_tab.py
plugin/Plugin/Graph/: connection_arrow.py  graph_tab.py  graph_view.py  layer_node.py  process_node.py
plugin/Plugin/Instruction/: instruction_tab.py
plugin/Plugin/Layer/: gpkg_layer.py  layer.py  layer_factory.py  layer_metadata_dialog.py  memory_layer.py  shp_layer.py  wfs_layer.py  wms_layer.py
plugin/Plugin/Process/: instrument.py  process.py  process_metadata_dialog.py
plugin/libs/arcp-0.2.1.dist-info/: RECORD
plugin/libs/charset_normalizer-3.4.3.dist-info/: RECORD
plugin/libs/rocrate-0.14.0.dist-info/: RECORD
scripts/: create_release.sh  prepare_release.sh
tests/: README.md  test_export_tab.py  test_graph_tab.py  test_instruction_tab.py
